Playtesting, some refactoring